# har-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  workflow.yaml
examples/: printer.rs
src/: lib.rs
src/v1_2/: mod.rs
src/v1_3/: mod.rs
tests/: regression.rs
tests/fixtures/: someapi123.har  someapi13.har
