[package]
name = "har"
version = "0.9.0"
authors = ["Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
edition = "2021"
description = "A HTTP Archive format (HAR) serialization & deserialization library."
license = "MIT"
repository = "https://github.com/mandrean/har-rs"
documentation = "https://docs.rs/har"
readme = "README.md"
keywords = ["har", "serialization", "deserialization", "json", "yaml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
serde_yaml = "0.9"
thiserror = "1.0"

[dev-dependencies]
glob = "0.3"
