[package]
name = "har"
version = "0.8.1"
authors = ["Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "A HTTP Archive format (HAR) serialization & deserialization library."
license = "MIT"
repository = "https://github.com/mandrean/har-rs"
documentation = "https://docs.rs/har"
readme = "README.md"
keywords = ["har", "serialization", "deserialization", "json", "yaml"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
